style.css
@import url('https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap');

/* Theme https://coolors.co/c2c2c2-ffffff-da7d58-323031-3d3b3c-5f5b6b */

* {
    font-family:'Play', sans-serif;;
}

body {
    height: 100vh;
}

div#side_panel {
    width: 10vh;
    z-index: 2000;
}

div.page_container {
    min-width: 100%;
    height: 100vh;
}

nav.navbar {
    background-color: #323031;
}

nav.navbar-nav {
    background-color: #3D3B3C !important;
}

a.nav-link {
    color: white !important;
    background-color: #3D3B3C !important;
    border-radius: 1vh;
}

a.nav-link:hover {
    background-color: #DA7D58 !important;
}

div#landing {
    background-color: #323031;
}

a#projects_link {
    text-decoration: none;
    text-align: center;
    padding: 1vh 2vh 0 2vh;
    border: #DA7D58 2px solid;
    background-color: #3D3B3C;
    border-radius: 1vh;
    margin-top: 2vh;
    transition: 0.2s;
}

a#projects_link:hover {
    background-color: #DA7D58;
}

img#profile {
    width:30vh;
    border-radius: 20vh;
    border: #DA7D58 2px solid;
}

div#contacts {
    background-color: #3D3B3C;
}

div#email_form {
    border-radius: 1vh;
    background-color: #323031;
}

div#projects {
    color: black;
    height: auto;
    background: #3D3B3C;
}

div#projects_inner {
    align-content: flex-end;
}

div.project {
    width: 90%;
    min-height: 30vh;
    border-radius: 2vh 0 0 2vh;
    background-color: #323031;
}

div.project_text {
    width: 100%;
    padding-left: 5vh;
    padding-right: 5vh;
    color: #DA7D58;
    justify-content: flex-end;
}

div.project_links {
    background-color: #3D3B3C;
    color: black;
    padding: 0;
    border-radius: 1vh;
}

h4.project_link {
    display: inline-block;
    width: 50%;
    text-align: center;
    border-radius: 1vh;
    margin-bottom: 0;
    cursor: pointer;
}

h4.project_link a {
    color: white;
    text-decoration: none;
}

h4.project_link:hover {
    background-color: #DA7D58;
    display: inline-block;
    width: 50%;
    text-align: center;
}

div.carousel {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 70%;
    min-width: 275px;
}

div.carousel_inner {
    display: flex;
    justify-content: center;
}

img.carousel_image {
    max-width: 100%;
    height: auto;
}

div.feature_container {
    background-color: #DA7D58;
    min-width: 100%;
}

div.feature_container_inner {
    width: 100%;
    margin: 2vh;
}

div.feature_content {
    width: 60%;
}

img.feature_tool_image {
    width: 10%;
    min-width: 40px;
    max-width: 75px;
    background-color: white;
    border-radius: 2vh;
    padding: 2px;
}

div.contact_link {
    height: 7vh;
    width: 7vh;
    padding-right: 1vh;
    padding-top: 3px;
    border-radius: 0 1vh 1vh 0;
    background-color: white;
    text-align: right;
    transform: rotate(0);

    /* Transitions */
    transition: 0.1s ease-out;
}

div.contact_link:hover {
    width: 18vh;
    background-color: #DA7D58;
}

p.contact_link_name {
    font-size: 2vh;
    display: none;
    /* display: inline-block; */
}

img.logo {
    max-height: 6vh;
}

h1.landing_title {
    color: white;
    transition: 0.05s;
}

h1.landing_title:hover {
    color: #DA7D58;
}

h2.landing_title {
    color: white;
    transition: 0.05s;
}

h2.landing_title:hover {
    color: #DA7D58;
}

img.landing_link_chevron {
    padding: 0.5vh;
    background-color: #323031;
    border: black 0.2vh solid;
    border-radius: 20vh;
    width: 5vh;
    transition: 0.2s;
}

img.landing_link_chevron:hover {
    background-color: #DA7D58;
    width: 5vh;
}

@media only screen and (max-width: 1300px){
    
    div.project {
        flex-direction: column;
        border-radius: 0 0 2vh 2vh;
        justify-content: flex-start;
        min-height: 60vh;
        width: 100%;
        padding-right: 1vh !important;
        margin-right: 1.5vh !important;
    }

    div.project_text {
        width: 100%;
        padding-left: 1vh;
        padding-right: 1vh;
        justify-content: flex-start;
    }

    div.carousel {
        min-width: 0;
        padding-top: 0;
        width: 100%;
    }

    div.feature_content {
        width: 100%;
    }
}

